Implement RaftConsensusService